Remove deprecation, some cleanups & formatting